<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="24dp"
    android:paddingRight="24dp">

    <ImageView
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_gravity="center"
        android:layout_margin="50dp"
        android:src="@drawable/logo"/>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/group_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/group_name"
            android:textColorHint="@color/colorPrimary"
            android:inputType="text"
            android:textSize="16dp"
            android:layout_marginLeft="12dp"
            android:layout_marginRight="12dp"
            android:layout_marginTop="12dp"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.toptoche.searchablespinnerlibrary.SearchableSpinner
            android:id="@+id/spinnerCategory"
            android:layout_width="match_parent"
            android:layout_height="44dp"
            app:hintText="Select Category"
            android:layout_marginLeft="6dp"
            android:layout_marginRight="4dp" />

    </com.google.android.material.textfield.TextInputLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0.8dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:background="@color/colorTint" />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp">

        <EditText
            android:id="@+id/group_link"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/group_link_here"
            android:inputType="text"
            android:textSize="16dp"
            android:layout_marginLeft="12dp"
            android:layout_marginRight="12dp"/>

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/group_Btn"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@drawable/rounded_corners"
        android:text="@string/add_group"
        android:textSize="20sp"
        android:textColor="@android:color/white"
        android:layout_margin="10dp"/>

</LinearLayout>